# taurus

./: .gitignore  AUTHORS  CMakeLists.txt  CTestConfig.cmake  Copyright.md  LICENSE  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Taurus_config.h.in  Version.cmake
cmake/: CallbackDefinePackaging.cmake  README.md
cmake/TPLs/: FindTPLEigen.cmake  FindTPLLifeV.cmake  FindTPLTrilinos.cmake  FindTPLlibgp.cmake
cmake/dependencies/: TaurusPackageDependencies.xml  TaurusPackageDependenciesTable.html
taurus/CSM/: CMakeLists.txt
taurus/CSM/Models/: AssemblyElementalStructure.cpp  CMakeLists.txt  ExpressionDefinitions.cpp  LinearElasticMaterial.cpp  LinearElasticMaterial.hpp  StVenantKirchhoffMaterial.cpp  StVenantKirchhoffMaterial.hpp  StructuralModel.cpp  StructuralModel.hpp  StructuralSolverTierI.cpp  StructuralSolverTierI.hpp  StructuralSolverTierII.cpp  StructuralSolverTierII.hpp  StructuralSolverTierIII.cpp  StructuralSolverTierIII.hpp
taurus/CSM/Testsuite/: CMakeLists.txt
taurus/CSM/Testsuite/shear_cube/: CMakeLists.txt  Cube.geo  Cube.mesh  LHS_ParametersConfigurations.m  SolverParamList.xml  TestingParameters.vit  TrainingParameters.vit  VisualizationParameters.vit  boundaryConditions.hpp  data  data_compare  data_online  launch_all.sh  main_GenerateHyperROM.cpp  main_GenerateSolutionBasis.cpp  main_GenerateSolutionSnapshots.cpp  main_GenerateSystemSnapshots.cpp  main_OnlineCompare.cpp  main_SolveOnline.cpp
taurus/CSM/cmake/: Dependencies.cmake
taurus/Core/: CMakeLists.txt
taurus/Core/Geometry/: CMakeLists.txt  RBF.cpp  RBF.hpp
taurus/Core/HyperReduction/: BuildReducedMesh.cpp  BuildReducedMesh.hpp  CMakeLists.txt  DEIM.hpp  HyperReductionMatrix.cpp  HyperReductionMatrix.hpp  HyperReductionVector.cpp  HyperReductionVector.hpp  ImportMatrixSnapshots.cpp  ImportMatrixSnapshots.hpp  ImportRhsSnapshots.cpp  ImportRhsSnapshots.hpp  MeshConnectivities.cpp  MeshConnectivities.hpp  ReducedMesh.hpp  VectorizedToMatrices.cpp  VectorizedToMatrices.hpp
taurus/Core/ReducedBasis/: BlockDiagonalBasis.cpp  BlockDiagonalBasis.hpp  BuildReducedBasis.cpp  BuildReducedBasis.hpp  CMakeLists.txt  ImportSnapshots.cpp  ImportSnapshots.hpp  ReductionVector.cpp  ReductionVector.hpp  V_POD.hpp
taurus/Core/Testsuite/: CMakeLists.txt
taurus/Core/Testsuite/GPmodel/: CMakeLists.txt  GPtraining.txt  main.cpp
taurus/Core/Testsuite/LapackGESVD/: CMakeLists.txt  main.cpp
taurus/Core/Testsuite/RBF_geometry/: CMakeLists.txt  RBF_data  TrainingParameters.vit  bypassF.mesh  data  loadCTRLpoints_def.py  loadCTRLpoints_ref.py  main.cpp
taurus/Core/Testsuite/VIT_reader/: CMakeLists.txt  TrainingParameters.vit  data  main.cpp
taurus/Core/Utilities/: CMakeLists.txt  DOF_Extractor.cpp  DOF_Extractor.hpp  DenseHDF5.cpp  DenseHDF5.hpp  GPmodel.cpp  GPmodel.hpp  TimeAndExtrapolationHandler.cpp  TimeAndExtrapolationHandler.hpp  Timer.cpp  Timer.hpp  Utilities.cpp  Utilities.hpp  VITreader.cpp  VITreader.hpp  assembly_functor.hpp
taurus/Core/cmake/: Dependencies.cmake
tools/: README.txt  ViewReducedMesh.py  configure_unix.config
