SET(Geometry_HEADERS
  Geometry/RBF.hpp
CACHE INTERNAL "")

SET(Geometry_SOURCES
  Geometry/RBF.cpp
CACHE INTERNAL "")


SET(LOCAL_HEADERS)
FOREACH(INC ${Geometry_HEADERS})
  STRING(REPLACE "Geometry/" "" LOCAL_INC ${INC})
  SET(LOCAL_HEADERS ${LOCAL_HEADERS} ${LOCAL_INC})
ENDFOREACH()

INSTALL(
  FILES ${LOCAL_HEADERS}
  DESTINATION "${${PROJECT_NAME}_INSTALL_INCLUDE_DIR}/taurus/Core/Geometry"
  COMPONENT ${PACKAGE_NAME}
)
